# RustBacktesterKalshi

./: .gitignore  AGENTS.md  DECISIONS.md  Makefile  README.md  SUMMARY.md  backtesterDescription.md  howToRun.md  howToRunWindows.md  kalshi-backtest  kalshi-backtest.bat  requirements.txt  strategyFormat.md
adapters/: README.md  book.py  fetch_settlements.py  kalshi_auth.py  kalshi_ws_collector.py  load_keys.py  natgas_markets.py  parquet_to_ndjson.py  replay_to_clickhouse.py  requirements.txt  rest_orderbook_collector.py  run_collector_supervised.sh  sinks.py
backtester/: Cargo.toml
backtester/src/: config.rs  engine.rs  event_curves.rs  execution.rs  exports.rs  fees.rs  fit_logistic.rs  latency.rs  lib.rs  main.rs  metrics.rs  optimize.rs  orderbook.rs  portfolio.rs  report.rs  rewards.rs  runspec.rs  settlement.rs  slippage.rs  strategy.rs  types.rs
backtester/src/adapters/: generic_csv.rs  generic_ndjson.rs  hyperliquid.rs  kalshi.rs  mod.rs  polymarket.rs  profile.rs  template.rs
backtester/src/data/: clickhouse.rs  clickhouse_schema.rs  mod.rs  ndjson.rs  summary.rs
backtester/src/strategies/: README.md  avellaneda_stoikov.rs  breakout.rs  cross_venue_arb.rs  imbalance.rs  logistic_arb.rs  market_maker.rs  mean_reversion.rs  mod.rs  momentum.rs  noop.rs  queue_probe.rs  template.rs  toolkit.rs
clickhouse/: run_clickhouse.sh
dashboard/: README.md  build_dashboard.py  build_latency_sweep.py
data/: make_synthetic_demo.py
docs/: ORDERBOOK_DELTAS_HOWTO.md  PLAN.md
figures/: tearsheet.html
notebooks/: clickhouse_data_inspection.ipynb
(+26 files in other folders)
